--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.6.0",
+    "firebase-tools": "^12.9.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
