--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.0",
     "firebase-tools": "^12.9.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
