--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
     "firebase-tools": "^12.9.0",
