--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.12",
+    "@types/slick-carousel": "^1.6.40",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
