--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/typography": "^0.5.10",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
     "firebase-tools": "^12.9.0",
+    "font-awesome": "^4.7.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "nookies": "^2.5.2",
