--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/typography": "^0.5.10",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
     "firebase-tools": "^12.9.0",
@@ -22,6 +23,7 @@
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "nookies": "^2.5.2",
+    "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
