--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "next-fire-auth": "^0.0.5",
     "nookies": "^2.5.2",
     "openai": "^4.20.1",
     "react": "^18",
