--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/storage": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -21,8 +22,10 @@
     "firebase-admin": "^11.11.0",
     "firebase-tools": "^12.9.0",
     "font-awesome": "^4.7.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0",
     "nookies": "^2.5.2",
     "openai": "^4.20.1",
     "react": "^18",
@@ -36,6 +39,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
