--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vercel": "^32.7.2"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
