--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1",
-    "vercel": "^32.7.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
